# python-bonusway

./: .gitignore  README.md  setup.cfg
python_task/: __main__.py  expression.py  main.py
tests/: test_expression.py  test_main.py
