[metadata]
name = bonusway-filter
version = 0.0.1
author = Ludvig Kihlman
author_email = lkihlman@gmail.com
description = A small program for querying BonusWay api for campaigns and filter, sort, and print result
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lzach/python-bonusway
project_urls =
    Bug Tracker = https://github.com/lzach/python-bonusway/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    requests==2.26.0
    addict==2.4.0
    requests-cache==0.7.4
